--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <li>item 3</li>
         <li>item 4</li>
         <li>item 5</li>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+
     </ol>
 </body>
 </html>
